test/expected/declare_af.out
declare f as function returning auto
                                ^
33: error: "auto" return type not supported in C
